# laba7

./: README.md  laba 7.py  pyproject.toml
